--- a/packages/css-sugars/src/_variables.scss
+++ b/packages/css-sugars/src/_variables.scss
@@ -1,32 +1,3 @@
-css.sugars
-===========
-
-Simple css/scss class helpers.
-
-Install
----------
-
-### npm
-`npm install -S @sfem/css-sugars`
-
-Usage
----------
-Include css in your html
-
-```html
-&lt;link rel="stylesheet" type="text/css" href="sugars.css"&gt;
-```
-
-or import module to your scss
-
-```scss
-@import '~@sfem/src/sugars';
-```
-
-SCSS Config
----------
-
-```scss
 $sugar-paddings: (0, 10px, 20px, 30px, 40px) !default;
 $sugar-ratios: ((1, 1), (2, 1), (3, 2), (4, 3)) !default;
 
@@ -35,6 +6,7 @@ $sugar-fs-list: (italic, normal) !default;
 $sugar-ta-list: (left, center, right, justify);
 $sugar-va-list: (baseline, bottom, middle, sub, super, text-bottom, text-top, top);
 
+$sugar-pm-types: ();
 $sugar-pm-sides: (left, right, top, bottom) !default;
 
 $sugar-enable-ta: true !default;
@@ -47,4 +19,4 @@ $sugar-enable-margins: true !default;
 $sugar-enable-hiders: true !default;
 $sugar-enable-aspect-ratio: true !default;
 $sugar-enable-va: true !default;
-```
+
