add "to-string" function

--- a/packages/scss-sugars/lib/_functions.scss
+++ b/packages/scss-sugars/lib/_functions.scss
@@ -6,6 +6,26 @@
   @return $number;
 }
 
+@function to-string($list, $glue: '', $is-nested: false) {
+  $result: null;
+
+  @for $i from 1 through length($list) {
+    $e: nth($list, $i);
+
+    @if type-of($e) == list {
+      $result: $result#{to-string($e, $glue, true)};
+    } @else {
+      $result: if(
+          $i != length($list) or $is-nested,
+          $result#{$e}#{$glue},
+          $result#{$e}
+      );
+    }
+  }
+
+  @return $result;
+}
+
 @function get-text-color($c, $l: $sugar-text-light, $d: $sugar-text-dark) {
   $x: round((red($c)*299 + green($c)*587 + blue($c)*114) / 1000);
   @if ($x > 160) {
