--- a/packages/scss-sugars/lib/_mixins.scss
+++ b/packages/scss-sugars/lib/_mixins.scss
@@ -1,11 +1,14 @@
 @mixin mq-sugars-generator($prefix, $suffix) {
-  .#{$prefix}-#{$suffix} {
+  $base: to-string($prefix);
+  $class-base: if(str-index($base, '.') != 1, '.#{$base}', $base);
+
+  #{$class-base}-#{$suffix} {
     @content;
   }
 
   @each $name, $value in $breakpoints {
     @include bp($name) {
-      .#{$prefix}-#{$name}-#{$suffix} {
+      #{$class-base}-#{$name}-#{$suffix} {
         @content;
       }
     }
