--- a/packages/css-sugars/src/sugars.scss
+++ b/packages/css-sugars/src/sugars.scss
@@ -1,12 +1,11 @@
 @import '~@sfem/breakpoint/lib/breakpoint';
 @import '~@sfem/scss-sugars/lib/sugars';
 @import 'variables';
-@import 'mixins';
 
 // Text
 @if $sugar-enable-ta {
   @each $val in $sugar-ta-list {
-    @include sugar-generator(ta, $val) {
+    @include mq-sugars-generator(ta, $val) {
       text-align: $val;
     }
   }
@@ -16,7 +15,7 @@
 
 @if $sugar-enable-fs {
   @each $val in $sugar-fs-list {
-    @include sugar-generator(fs, $val) {
+    @include mq-sugars-generator(fs, $val) {
       font-style: $val;
     }
   }
@@ -24,20 +23,20 @@
 
 @if $sugar-enable-fw {
   @each $val in $sugar-fw-list {
-    @include sugar-generator(fw, $val) {
+    @include mq-sugars-generator(fw, $val) {
       font-weight: $val;
     }
   }
 }
 
 @if $sugar-enable-ellipsis {
-  @include sugar-generator(text, ellipsis) {
+  @include mq-sugars-generator(text, ellipsis) {
     @include ellipsis();
   }
 }
 
 @if $sugar-enable-bw {
-  @include sugar-generator(text, break-word) {
+  @include mq-sugars-generator(text, break-word) {
     @include break-word();
   }
 }
@@ -55,12 +54,12 @@
 
 @each $num in $sugar-paddings {
   @each $type in $sugar-pm-types {
-    @include sugar-generator(str-slice($type, 0, 1), strip-unit($num)) {
+    @include mq-sugars-generator(str-slice($type, 0, 1), strip-unit($num)) {
       #{$type}: #{$num};
     }
 
     @each $side in $sugar-pm-sides {
-      @include sugar-generator(str-slice($type, 0, 1) + str-slice($side, 0, 1), strip-unit($num)) {
+      @include mq-sugars-generator(str-slice($type, 0, 1) + str-slice($side, 0, 1), strip-unit($num)) {
         #{$type}: #{$num};
       }
     }
@@ -95,7 +94,7 @@
 
 @if $sugar-enable-aspect-ratio {
   @each $val in $sugar-ratios {
-    @include sugar-generator(ratio, nth($val, 1) + '-' + nth($val, 2)) {
+    @include mq-sugars-generator(ratio, nth($val, 1) + '-' + nth($val, 2)) {
       @include aspect-ratio(nth($val, 1), nth($val, 2))
     }
   }
@@ -109,12 +108,12 @@
   }
 
   @each $val in $sugar-va-list {
-    @include sugar-generator(va, $val) {
+    @include mq-sugars-generator(va, $val) {
       vertical-align: #{$val};
     }
   }
 }
 
-@include sugar-generator(block, round) {
+@include mq-sugars-generator(block, round) {
   border-radius: 50%;
 }
