--- a/packages/grid/src/_scss-core/_functions.scss
+++ b/packages/grid/src/_scss-core/_functions.scss
@@ -1,7 +1,9 @@
-@function strip-unit($number) {
-  @if type-of($number) == 'number' and not unitless($number) {
-    @return $number / ($number * 0 + 1);
-  }
+@function get-pad($num) {
+  $pad: if(unit($num) != '', $num, $num * 1px);
+  @return $pad;
+}
 
-  @return $number;
+@function gap-postfix($num) {
+  $postfix: if(unit($num) == '' or unit($num) == 'px', strip-unit($num), $num);
+  @return $postfix;
 }
