restore base grid gap

--- a/packages/grid/src/sfem-grid.scss
+++ b/packages/grid/src/sfem-grid.scss
@@ -19,6 +19,8 @@
   justify-content: flex-start;
   min-width: 0;
 
+  margin: -#{$sfem-grid-gap-base / 2};
+
   // vertical align
 
   @each $item in ((top, flex-start), (bottom, flex-end), (middle, center)) {
@@ -61,6 +63,8 @@
 .#{$sfem-grid-box-name} {
 
   // vertical align
+
+  padding: $sfem-grid-gap-base / 2;
 
   @each $item in ((top, flex-start), (bottom, flex-end), (middle, center)) {
     @include mq-sugars-generator(#{&}--va, nth($item, 1)) {
