change t-string fenction

--- a/packages/scss-sugars/lib/_functions.scss
+++ b/packages/scss-sugars/lib/_functions.scss
@@ -6,24 +6,13 @@
   @return $number;
 }
 
-@function to-string($list, $glue: '', $is-nested: false) {
-  $result: null;
-
-  @for $i from 1 through length($list) {
-    $e: nth($list, $i);
-
-    @if type-of($e) == list {
-      $result: $result#{to-string($e, $glue, true)};
-    } @else {
-      $result: if(
-          $i != length($list) or $is-nested,
-          $result#{$e}#{$glue},
-          $result#{$e}
-      );
-    }
+@function to-string($value) {
+  @if type-of($value) == string {
+    @return unquote($value);
   }
-
-  @return $result;
+  @else {
+    @return inspect($value + unquote(""));
+  }
 }
 
 @function get-text-color($c, $l: $sugar-text-light, $d: $sugar-text-dark) {
