--- a/packages/scss-sugars/lib/_functions.scss
+++ b/packages/scss-sugars/lib/_functions.scss
@@ -32,3 +32,16 @@
 ) {
   @return unquote($w + ' ' + $s + '/' + $lh + ' ' + $f);
 }
+
+@function deep-map-merge($parent-map, $child-map) {
+  $result: $parent-map;
+  @each $key, $value in $child-map {
+    @if (not map-has-key($result, $key)) or (type-of(map-get($result, $key)) != type-of($value)) or (not (type-of(map-get($result, $key)) == map and type-of($value) == map)) {
+      $result: map-merge($result, ($key: $value));
+    } @else {
+      $result: map-merge($result, ($key: deep-map-merge(map-get($result, $key), $value)));
+    }
+  }
+
+  @return $result;
+}
