--- a/packages/scss-sugars/lib/_variables.scss
+++ b/packages/scss-sugars/lib/_variables.scss
@@ -1,8 +1,3 @@
-$sugar-colors: (
-  white: '#fff',
-  black: '#000'
-) !default;
-
 $sugar-typo-fz: 16px !default;
 $sugar-typo-lh: 20px !default;
 $sugar-typo-fw: normal !default;
@@ -10,3 +5,8 @@ $sugar-typo-font: 'Roboto', sans-serif !default;
 
 $sugar-text-light: #fff !default;
 $sugar-text-dark: #000 !default;;
+
+$sugar-colors: (
+  white: $sugar-text-light,
+  black: $sugar-text-dark
+) !default;
