--- a/packages/css-sugars/src/_variables.scss
+++ b/packages/css-sugars/src/_variables.scss
@@ -1,4 +1,4 @@
-$sugar-paddings: (0, 10px, 20px, 30px, 40px) !default;
+$sugar-paddings: (0, 16px, 24px, 32px, 48px) !default;
 $sugar-ratios: ((1, 1), (2, 1), (3, 2), (4, 3)) !default;
 
 $sugar-fw-list: (normal, bold) !default;
@@ -19,4 +19,5 @@ $sugar-enable-margins: true !default;
 $sugar-enable-hiders: true !default;
 $sugar-enable-aspect-ratio: true !default;
 $sugar-enable-va: true !default;
+$sugar-enable-display: true !default;
 
