--- a/packages/breakpoint/lib/breakpoint.scss
+++ b/packages/breakpoint/lib/breakpoint.scss
@@ -1,59 +1,68 @@
-$breakpoints-list: (
-  s: 640px,
-  m: 1024px,
-  l: 1200px,
-  xl: 1440px,
+$breakpoints: (
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px,
+  xxl: 1440px,
 ) !default;
 
-$breakpoints: ();
-$breakpoints-before: ();
+$breakpoints-degrade: false !default;
 
-@each $name, $point in $breakpoints-list {
-  $breakpoints: map-merge(($name: $point), $breakpoints);
-  $breakpoints-before: map-merge(($name: max-width #{$point - 1}), $breakpoints-before);
+@function check-breakpoint-type($query) {
+  $type: type-of($query);
+
+  @if ($type == list) {
+    @if (length($query) == 2) {
+      @if (type-of(nth($query, 1)) == number and type-of(nth($query, 2)) == number) {
+        @return between;
+      }
+
+      @if (type-of(nth($query, 1)) == string and type-of(nth($query, 2)) == number) {
+        @return single;
+      }
+
+      @return complex;
+    }
+  }
+
+  @return type-of($query);
 }
 
-@function breakpoint-parse-query($query, $mq: 'all') {
-  $length: length($query);
-  $mq: $mq + ' ';
+@function breakpoint-parse-query($query, $for: all) {
+  $query-type: check-breakpoint-type($query);
 
-  @if $length == 1 {
-    @return $mq + 'and (min-width: ' + $query + ')';
+  $mq: $for;
+
+  @if ($query-type == number) {
+    @return $mq + ' and (min-width: ' + $query + ')';
   }
 
-  @if (type-of(nth($query, 1)) == 'string' and type-of(nth($query, 2)) == 'number') {
-    @return $mq + 'and (' + nth($query, 1) + ': ' + nth($query, 2) + ')';
+  @if ($query-type == single) {
+    @return $mq + ' and (' + nth($query, 1) + ': ' + nth($query, 2) + ')';
   }
 
-  @if (type-of(nth($query, 1)) == 'number' and type-of(nth($query, 2)) == 'number') {
-    @return $mq + 'and (min-width: ' + nth($query, 1) + ') and (max-width: ' + nth($query, 2) + ')';
+  @if ($query-type == between) {
+    @return $mq + ' and (min-width: ' + nth($query, 1) + ') and (max-width: ' + nth($query, 2) + ')';
   }
 
-  @each $single-query in $query {
-    $mq: $mq + 'and (' + nth($query, 1) + ': ' + nth($query, 2) + ')';
-  }
-  @return $mq;
-}
-
-@mixin bp($query, $for: 'all', $bp: $breakpoints) {
-  $q: map-get($bp, $query);
-  $query-string: breakpoint-parse-query($q, $for);
-
-  @media #{$query-string} {
-    @content;
+  @if ($query-type == complex) {
+    @each $single-query in $query {
+      $mq: $mq + ' and (' + nth($single-query, 1) + ': ' + nth($single-query, 2) + ')';
+    }
+    @return $mq;
   }
 }
 
-@mixin bp-max($query, $for: 'all') {
-  $q: map-get($breakpoints-before, $query);
-  $query-string: breakpoint-parse-query($q, $for);
-
-  @media #{$query-string} {
-    @content;
+@mixin bp($query, $bp: $breakpoints, $for: all, $degrade: $breakpoints-degrade) {
+  @if (check-breakpoint-type($query) == string) {
+    @if($degrade == false) {
+      $query: map-get($bp, $query);
+    } @else {
+      $query: (max-width, map-get($bp, $query) - 1)
+    }
   }
-}
 
-@mixin bpq($query, $for: 'all') {
   $query-string: breakpoint-parse-query($query, $for);
 
   @media #{$query-string} {
