--- a/packages/scss-sugars/lib/sugars.scss
+++ b/packages/scss-sugars/lib/sugars.scss
@@ -1,6 +1,6 @@
 @import '~@sfem/breakpoint/lib/breakpoint';
 
+@import 'constants';
 @import 'variables';
 @import 'functions';
-@import 'functions.trigonometry';
 @import 'mixins';
