--- a/packages/grid/src/_scss-core/_variables.scss
+++ b/packages/grid/src/_scss-core/_variables.scss
@@ -1,13 +1,9 @@
-@import "~@sfem/breakpoint/lib/breakpoint";
-
 $sfem-grid-name: 'grid' !default;
 $sfem-grid-box-name: 'grid__box' !default;
 
 $sfem-grid-columns: (12) !default;
 
-$sfem-grid-gap-base: 16 !default;
-$sfem-grid-gap-additional: (0, 8, 24) !default;
+$sfem-grid-gap-base: 24 !default;
+$sfem-grid-gaps: (0, 8, 16) !default;
 
 $sfem-grid-breakpoint: $breakpoints !default;
-
-$sfem-grid-gaps: join($sfem-grid-gap-base, $sfem-grid-gap-additional);
